--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "cordova-android": "7.1.4",
-    "cordova-plugin-android-permissions": "1.0.0",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.0.1",
-    "cordova-plugin-iosrtc": "4.0.2",
+    "cordova-plugin-ionic-webview": "^4.1.0",
+    "cordova-plugin-iosrtc": "^4.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
